change hero about

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,8 +6,8 @@
           <span data-i18n="fullname">Alexey Brazhnikov</span>
         </h1>
         <p class="about__description" data-i18n="about">
-          Hi, I am a junior frontend developer. I want to be part of a friendly and professional team where I can develop my development skills. I am a communicative and responsible person, eager to
-          grow professionally and improve my skills.
+          Hi, I'm a junior front-end developer. I want to be part of a friendly and professional team where I can apply my knowledge and skills to create my amazing interfaces and advance my careers
+          in the IT industry. I am a sociable and responsible person, striving for professional growth and improvement of my skills.
         </p>
         <div class="about__info">
           <div class="info__item">
