--- a/src/partials/portfilio.html
+++ b/src/partials/portfilio.html
@@ -1,6 +1,7 @@
 <section id="portfolio" class="section portfolio">
   <div class="section__wrap portfolio__wrap container">
-    @@include('./components/section-aside.html',{ title:"portfolio", description:"Constantly practicing what I have learned" })
+    @@include('./components/section-aside.html',{ title:"portfolio",
+    description:"Constantly practicing what I have learned" })
     <div class="section__content portfolio__body">
       <ul class="list portfolio__list">
         <li class="list__item portfolio__item">
@@ -8,14 +9,26 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Speak</div>
-                <a href="https://github.com/lex-gh/agency" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/agency"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/agency/" class="project__link-demo" data-i18n="link">Visit website</a>
-              <div class="project__description" data-i18n="project_one_desc">Landing page for psychologists. Layout using Gulp, SCSS preprocessor and BEM methodology</div>
+              <a
+                href="https://lex-gh.github.io/agency/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
+              <div class="project__description" data-i18n="project_one_desc">
+                Landing page for psychologists. Layout using Gulp, SCSS
+                preprocessor and BEM methodology
+              </div>
               <div class="project__tags">
                 <span>#html</span>
                 <span>#scss</span>
@@ -31,15 +44,26 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Photographer</div>
-                <a href="https://github.com/lex-gh/website-photographer" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/website-photographer"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/website-photographer/" class="project__link-demo" data-i18n="link">Visit website</a>
+              <a
+                href="https://lex-gh.github.io/website-photographer/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
               <div class="project__description" data-i18n="project_two_desc">
-                Photographer landing page. Pixel perfect layout using SCSS preprocessor and BEM methodology. Ability to change the language and colors of the page.
+                Photographer landing page. Pixel perfect layout using SCSS
+                preprocessor and BEM methodology. Ability to change the language
+                and colors of the page.
               </div>
               <div class="project__tags">
                 <span>#html</span>
@@ -57,15 +81,25 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Movie app</div>
-                <a href="https://github.com/lex-gh/movie-app" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/movie-app"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/movie-app/" class="project__link-demo" data-i18n="link">Visit website</a>
+              <a
+                href="https://lex-gh.github.io/movie-app/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
               <div class="project__description" data-i18n="project_three_desc">
-                Movie search site. Responsive layout using SCSS preprocessor and BEM methodology. Getting information about movies using the API.
+                Movie search site. Responsive layout using SCSS preprocessor and
+                BEM methodology. Getting information about movies using the API.
               </div>
               <div class="project__tags">
                 <span>#html</span>
@@ -82,15 +116,26 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Weather app</div>
-                <a href="https://github.com/lex-gh/weather-app" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/weather-app"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/weather-app/" class="project__link-demo" data-i18n="link">Visit website</a>
+              <a
+                href="https://lex-gh.github.io/weather-app/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
               <div class="project__description" data-i18n="project_four_desc">
-                Weather website. Written using Vue.js and TailwindCSS. Getting information via API. Shows weather information for the selected city.
+                Weather website. Written using Vue.js and TailwindCSS. Getting
+                information via API. Shows weather information for the selected
+                city.
               </div>
               <div class="project__tags">
                 <span>#vue</span>
@@ -107,15 +152,26 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Vuello</div>
-                <a href="https://github.com/lex-gh/vue-trello" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/vue-trello"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/vue-trello/" class="project__link-demo" data-i18n="link">Visit website</a>
+              <a
+                href="https://lex-gh.github.io/vue-trello/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
               <div class="project__description" data-i18n="project_five_desc">
-                The task manager is implemented on Vue3 (composition API) using Vuex. To interact with boards and tasks, the Vue Smooth DnD library is used. For storage, LocaleStorage is used.
+                The task manager is implemented on Vue3 (composition API) using
+                Vuex. To interact with boards and tasks, the Vue Smooth DnD
+                library is used. For storage, LocaleStorage is used.
               </div>
               <div class="project__tags">
                 <span>#vue</span>
@@ -130,14 +186,26 @@
             <div class="project__info">
               <div class="project__head">
                 <div class="project__title">Snake game</div>
-                <a href="https://github.com/lex-gh/snake-game" class="project__link">
+                <a
+                  href="https://github.com/lex-gh/snake-game"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://lex-gh.github.io/snake-game/" class="project__link-demo" data-i18n="link">Visit website</a>
-              <div class="project__description" data-i18n="project_six_desc">The snake game is written in JavaScript. Implemented as a custom web component. Control via keyboard or game buttons.</div>
+              <a
+                href="https://lex-gh.github.io/snake-game/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
+              <div class="project__description" data-i18n="project_six_desc">
+                The snake game is written in JavaScript. Implemented as a custom
+                web component. Control via keyboard or game buttons.
+              </div>
               <div class="project__tags">
                 <span>#javascript</span>
                 <span>#scss</span>
@@ -149,15 +217,61 @@
           <div class="project">
             <div class="project__info">
               <div class="project__head">
-                <div class="project__title">Q&A</div>
-                <a href="https://github.com/lex-gh/vue-qua-client" class="project__link">
+                <div class="project__title">Mentors</div>
+                <a
+                  href="https://github.com/lex-gh/mentor"
+                  class="project__link"
+                >
                   <svg class="project__icon">
                     <use xlink:href="images/sprite/icon.svg#github" />
                   </svg>
                 </a>
               </div>
-              <a href="https://vue-qua-client-p4vbhf81c-alex-maskall.vercel.app/" class="project__link-demo" data-i18n="link">Visit website</a>
-              <div class="project__description" data-i18n="project_seven_desc">Q&A site on Vue + Pinia. Server on Node.js using the Express framework. MongoDB database</div>
+              <a
+                href="https://lex-gh.github.io/mentor/"
+                target="_blank"
+                class="project__link-demo"
+                data-i18n="link"
+                >Visit website</a
+              >
+              <div class="project__description" data-i18n="project_seven_desc">
+                Web application for finding a mentor.
+              </div>
+              <div class="project__tags">
+                <span>#vue</span>
+                <span>#tailwindCSS</span>
+                <span>#vue router</span>
+                <span>#API</span>
+                <span>#supabase database</span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="list__item portfolio__item">
+          <div class="project">
+            <div class="project__info">
+              <div class="project__head">
+                <div class="project__title">Q&A</div>
+                <a
+                  href="https://github.com/lex-gh/vue-qua-client"
+                  class="project__link"
+                >
+                  <svg class="project__icon">
+                    <use xlink:href="images/sprite/icon.svg#github" />
+                  </svg>
+                </a>
+              </div>
+              <a
+                href="https://vue-qua-client-p4vbhf81c-alex-maskall.vercel.app/"
+                class="project__link-demo"
+                data-i18n="link"
+                target="_blank"
+                >Visit website</a
+              >
+              <div class="project__description" data-i18n="project_eight_desc">
+                Q&A site on Vue + Pinia. Server on Node.js using the Express
+                framework. MongoDB database
+              </div>
               <div class="project__tags">
                 <span>#vue</span>
                 <span>#vue router</span>
